fix/ERROR    -  mkdocstrings.extension: Importing 'pysatellite' failed, possible causes are:

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,7 +33,7 @@ plugins:
         python:
           setup_commands:
             - import sys
-            - sys.path.append("./src/pysatellite")
+            - sys.path.append("src")
 
 markdown_extensions:
   - admonition
