--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pysatellite
+name = pySatellite
 version = 0.0.1
 author = pySatellite
 author_email = pySatellite@gmail.com
@@ -11,8 +11,10 @@ project_urls =
     Bug Tracker = https://github.com/pySatellite/pySatellite.github.io/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GNU License
+    License :: OSI Approved :: GNU General Public License (GPL)
     Operating System :: OS Independent
+license = GNU General Public License (GPL)
+platform = macOS
 
 [options]
 package_dir =
