cli 명령어 추가 pySatellite-ping, pySatellite-뭐하니

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pySatellite
-version = 0.0.3
+version = 0.1.0
 author = pySatellite
 author_email = pySatellite@gmail.com
 description = simulate satellite tracking
@@ -24,3 +24,10 @@ python_requires = >=3.6
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    pySatellite-ping = pysatellite.cli:ping
+    pySatellite-뭐하니 = pysatellite.cli:what_are_you_doing
+    pySatellite-what_are_you_doing = pysatellite.cli:what_are_you_doing
+
