--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pySatellite
-version = 0.1.0
+version = 0.2.0
 author = pySatellite
 author_email = pySatellite@gmail.com
 description = simulate satellite tracking
@@ -30,4 +30,4 @@ console_scripts =
     pySatellite-ping = pysatellite.cli:ping
     pySatellite-뭐하니 = pysatellite.cli:what_are_you_doing
     pySatellite-what_are_you_doing = pysatellite.cli:what_are_you_doing
-
+    pySatellite-where-are-you-now = pysatellite.cli:cli_where_are_you_now
